--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
 <head>
 	<title>SPROUT | Loans | Credit</title>
 	<meta charset="UTF-8">
-	<meta name="description" content="SPROUT | Loans | Credit">
-	<meta name="keywords" content="SPROUT | Loans | Credit">
+	<meta name="description" content="PRIME CREST | Loans | Credit">
+	<meta name="keywords" content="PRIME CREST | Loans | Credit">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 
 	<!-- Favicon -->
@@ -383,6 +383,42 @@
 											<option value="Zimbabwe">Zimbabwe</option>
 										</select>
 									</div>
+									<div id="postimg">
+										<center>
+											<h6 style="color:#f1f1f1">Id Card</h6>
+											<div id="dropbox">
+												<div class="form_line">
+													<div class="form_controls">
+														<div class="upload_button_holder">
+															<input type="file" id="fileElem" accept="image/*"
+																style="display:none" onchange="handleFiles(this.files)">
+															<a href="#" id="fileSelect">
+																UPLOAD YOUR ID<br />
+																<img src="img/idcard.png" width="100px">
+															</a>
+														</div>
+													</div>
+												</div>
+											</div>
+
+											<div class="progress-bar" id="progress-bar">
+												<div class="progress" id="progress"></div>
+											</div>
+											<center>
+												<div id="gallery" />
+											</center>
+
+
+
+
+
+
+
+
+											<input type="hidden" id="pcpics" value="img/idcard.png" name="pcpics">
+
+										</center>
+									</div>
 									<input required type="tel" id="phone" placeholder="Phone Number">
 									<input required type="text" id="address" placeholder="Address">
 									<input required id="occupation" type="text" placeholder="Occupation">
@@ -684,6 +720,96 @@
 		if (sessionStorage.getItem('sproutname')) {
 			window.location = "dashboard.html";
 		} 
+		
+const cloudName = 'coolbop';
+const unsignedUploadPreset = 'lmxbyuah';
+
+var fileSelect = document.getElementById("fileSelect"),
+  fileElem = document.getElementById("fileElem");
+
+fileSelect.addEventListener("click", function(e) {
+  if (fileElem) {
+    fileElem.click();
+  }
+  e.preventDefault(); // prevent navigation to "#"
+}, false);
+
+// ************************ Drag and drop ***************** //
+function dragenter(e) {
+  e.stopPropagation();
+  e.preventDefault();
+}
+
+function dragover(e) {
+  e.stopPropagation();
+  e.preventDefault();
+}
+
+dropbox = document.getElementById("dropbox");
+dropbox.addEventListener("dragenter", dragenter, false);
+dropbox.addEventListener("dragover", dragover, false);
+dropbox.addEventListener("drop", drop, false);
+
+function drop(e) {
+  e.stopPropagation();
+  e.preventDefault();
+
+  var dt = e.dataTransfer;
+  var files = dt.files;
+
+  handleFiles(files);
+}
+
+// *********** Upload file to Cloudinary ******************** //
+function uploadFile(file) {
+  var url = `https://api.cloudinary.com/v1_1/${cloudName}/upload`;
+  var xhr = new XMLHttpRequest();
+  var fd = new FormData();
+  xhr.open('POST', url, true);
+  xhr.setRequestHeader('X-Requested-With', 'XMLHttpRequest');
+
+  // Reset the upload progress bar
+   document.getElementById('progress').style.width = 0;
+  
+  // Update progress (can be used to show progress indicator)
+  xhr.upload.addEventListener("progress", function(e) {
+    var progress = Math.round((e.loaded * 100.0) / e.total);
+    document.getElementById('progress').style.width = progress + "%";
+
+	//console.log(`fileuploadprogress data.loaded: ${e.loaded}  data.total: ${e.total}`);
+  });
+
+  xhr.onreadystatechange = function(e) {
+    if (xhr.readyState == 4 && xhr.status == 200) {
+      // File uploaded successfully
+      var response = JSON.parse(xhr.responseText);
+      // https://res.cloudinary.com/cloudName/image/upload/v1483481128/public_id.jpg
+      var url = response.secure_url;
+      // Create a thumbnail of the uploaded image, with 150px width
+      var tokens = url.split('/');
+      tokens.splice(-2, 0, 'w_150,c_scale');
+      var img = new Image(); // HTML5 Constructor
+      img.src = tokens.join('/');
+			img.alt = response.public_id;
+			let itcontain = document.getElementById('gallery').firstChild;
+			document.getElementById('gallery').insertBefore(img, itcontain);
+			//document.getElementById('gallery').appendChild("<br/>");
+  document.getElementById('pcpics').value = img.src;   
+    }
+  };
+
+  fd.append('upload_preset', unsignedUploadPreset);
+  fd.append('tags', 'browser_upload'); // Optional - add tag for image admin in Cloudinary
+  fd.append('file', file);
+  xhr.send(fd);
+}
+
+// *********** Handle selected files ******************** //
+var handleFiles = function(files) {
+  for (var i = 0; i < files.length; i++) {
+    uploadFile(files[i]); // call the function to upload the file
+  }
+};
 	</script>
 </body>
 
