--- a/index.html
+++ b/index.html
@@ -35,6 +35,19 @@
 </head>
 
 <body>
+<!--Start of Tawk.to Script-->
+<script type="text/javascript">
+	var Tawk_API=Tawk_API||{}, Tawk_LoadStart=new Date();
+	(function(){
+	var s1=document.createElement("script"),s0=document.getElementsByTagName("script")[0];
+	s1.async=true;
+	s1.src='https://embed.tawk.to/5e7fc4b469e9320caabe0ac6/default';
+	s1.charset='UTF-8';
+	s1.setAttribute('crossorigin','*');
+	s0.parentNode.insertBefore(s1,s0);
+	})();
+	</script>
+	<!--End of Tawk.to Script-->
 	<!-- Page Preloder -->
 	<div id="preloder">
 		<div class="loader"></div>
@@ -95,6 +108,11 @@
 								<form class="hero-form" method="POST" onsubmit="return  login()">
 									<input required id="logemail" type="text" placeholder="Username or  E-mail">
 									<input required type="password" id="logpassword" placeholder="********">
+									<br>
+									<a style="color:#f1f1f1">Change Password</a>
+									<br>
+									&nbsp;
+									<br>
 									<button id="logins" class="site-btn">login</button>
 								</form>
 							</div>
